--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>作品展示</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,6 +24,25 @@
 
     <div class="iframe-wrapper">
         <iframe id="work-iframe"></iframe>
+    </div>
+
+    <div>
+        <h3>讨论区</h3>
+        <script src="https://giscus.app/client.js"
+                data-repo="Hatmic/BKSCommunity"
+                data-repo-id="R_kgDOLa2xhQ"
+                data-category="General"
+                data-category-id="DIC_kwDOLa2xhc4CdrT9"
+                data-mapping="pathname"
+                data-strict="0"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="bottom"
+                data-theme="preferred_color_scheme"
+                data-lang="zh-CN"
+                crossorigin="anonymous"
+                async>
+        </script>
     </div>
 
     <script>
