修复一些问题并开设论坛板块

--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
         <a href="index.html">BKStudio</a>
         <a href="index.html">首页</a>
         <a href="#">发现</a>
-        <a href="#">论坛</a>
+        <a href="community.html">论坛</a>
         <a href="#">关于</a>
         <a href="#">登录</a>
     </nav>
@@ -23,11 +23,12 @@
     </div>
 
     <div class="iframe-wrapper">
-        <iframe id="work-iframe"></iframe>
+        <iframe id="work-iframe" style="border-radius: 8px;"></iframe>
     </div>
 
+    <!-- 评论区 -->
     <div>
-        <h3>讨论区</h3>
+        <h3>评论区</h3>
         <script src="https://giscus.app/client.js"
                 data-repo="Hatmic/BKSCommunity"
                 data-repo-id="R_kgDOLa2xhQ"
