--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <!-- 导航栏 -->
     <nav>
-        <a href="#">BKStudio</a>
-        <a href="#">首页</a>
+        <a href="index.html">BKStudio</a>
+        <a href="index.html">首页</a>
         <a href="#">发现</a>
-        <a href="#">论坛</a>
+        <a href="community.html">论坛</a>
         <a href="#">关于</a>
         <a href="#">登录</a>
     </nav>
