增加小图标

--- a/community.html
+++ b/community.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>论坛</title>
+    <link rel="icon" href="./img/icon/icon0.png">
 </head>
 <body>
 
@@ -14,8 +15,8 @@
         <a href="index.html">首页</a>
         <a href="#">发现</a>
         <a href="community.html">论坛</a>
+        <a href="#">博客</a>
         <a href="#">关于</a>
-        <a href="#">登录</a>
     </nav>
 
     <div>
