--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>作品展示</title>
+    <link rel="icon" href="./img/icon/icon0.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,8 +14,8 @@
         <a href="index.html">首页</a>
         <a href="#">发现</a>
         <a href="community.html">论坛</a>
+        <a href="#">博客</a>
         <a href="#">关于</a>
-        <a href="#">登录</a>
     </nav>
 
     <!-- 作品 -->
